openshift/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: frc-scheduler-server
  labels:
    app.kubernetes.io/part-of: frc-scheduler-server-git-app
